# Pico_Projects

./: CMakeLists.txt  README.md  pico_sdk_import.cmake
docs/: old code
src/: CMakeLists.txt  Main.cpp  Main.h  main.cpp
src/Module/: Altitude.cpp  Altitude.h  AnalogInput.cpp  AnalogInput.h  Battery.cpp  Battery.h  I2cDevice.cpp  I2cDevice.h  Inertial.cpp  Inertial.h  Motor.cpp  Motor.h  MotorController.cpp  MotorController.h  QuadController.cpp  QuadController.h  ShiftRegister.cpp  ShiftRegister.h  VariableResistor.cpp  VariableResistor.h
